--- a/GigHub2/Web.config
+++ b/GigHub2/Web.config
@@ -9,10 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-GigHub2-20180611121048.mdf;Initial Catalog=aspnet-GigHub2-20180611121048;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <!--<add name="GigsConnection" connectionString="Data Source=.;Initial Catalog=GigHub;Integrated Security=True;Persist Security Info=False" providerName="System.Data.SqlClient" />
-    -->
-    <add name="GigsConnection" connectionString="data source=ASMAA-FOUAD\RAGAB;initial catalog=MotoParts;user id=sa;password=pa$$W0rd;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="GigsConnection" connectionString="data source=ASMAA-FOUAD\RAGAB;initial catalog=GigHub;user id=sa;password=pa$$W0rd;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
